<resources>
    <string name="app_name">PAM_LAB5_1</string>
    <string name="fullname">Full Name</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="address">Location/Address</string>
    <string name="name">Name</string>
    <string name="desease">Desease</string>
    <string name="location">Location</string>
    <string name="description">Description(Optional)</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>

</resources>
