<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="119dp"
            android:layout_height="102dp"
            android:layout_gravity="center"
            android:background="@drawable/addphoto"
            app:srcCompat="@drawable/addphoto2" />



        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/fullname"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="10dp"
            android:background="@drawable/textbox"
            android:ems="10"
            android:hint="Your Full Name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/birthday"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:background="@drawable/textbox"
            android:ems="10"
            android:hint="Your Birthday"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/textbox"
            android:ems="10"
            android:hint="Your Email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/phone"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/textbox"
            android:ems="10"
            android:hint="Your Phone Number"
            android:inputType="phone"
            android:paddingLeft="10dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/address"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/textbox"
            android:ems="10"
            android:hint="Your Location"
            android:inputType="textPostalAddress"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="350dp"
            android:layout_height="67dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnnext"
            android:onClick="btnNext" />

    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>